ig post work needed

--- a/index.html
+++ b/index.html
@@ -78,16 +78,117 @@
 		<div id="ig-body">
 			<div class="container px-5">
 				<div class="row">
-					<div class="col-md-2"></div>
-					<div class="col-md-4"><div id="article">me</div></div>
+					<div class="col-md-1 me-4"></div>
+					<div class="col-md-5 ms-5">
+						<div id="article" class="mt-4">
+							<div class="card flex-row">
+								<div class="card-list">
+									<img src="./img/290207656_786068259436766_2630006453682191055_n.jpg" alt="" />
+									<div class="card-text"><h5>annorcode</h5></div>
+								</div>
+								<div class="card-list">
+									<img src="./img/290207656_786068259436766_2630006453682191055_n.jpg" alt="" />
+									<div class="card-text"><h5>annorcode</h5></div>
+								</div>
+								<div class="card-list">
+									<img src="./img/290207656_786068259436766_2630006453682191055_n.jpg" alt="" />
+									<div class="card-text"><h5>annorcode</h5></div>
+								</div>
+								<div class="card-list">
+									<img src="./img/290207656_786068259436766_2630006453682191055_n.jpg" alt="" />
+									<div class="card-text"><h5>annorcode</h5></div>
+								</div>
+								<div class="card-list">
+									<img src="./img/290207656_786068259436766_2630006453682191055_n.jpg" alt="" />
+									<div class="card-text"><h5>annorcode</h5></div>
+								</div>
+								<div class="card-list">
+									<img src="./img/290207656_786068259436766_2630006453682191055_n.jpg" alt="" />
+									<div class="card-text"><h5>annorcode</h5></div>
+								</div>
+							</div>
+						</div>
+					</div>
 					<div class="col-md-4">
 						<div id="aside">
-							<div class="auth-img"><img src="./img/me.jpg" alt="" /></div>
 							<div class="auth-body">
-								<div class="h5">topujss</div>
+								<div class="auth-img me-3"><img src="./img/me.jpg" alt="" /></div>
+								<h6>topujss</h6>
 								<small class="text-muted">Toquir Ahmed</small>
 							</div>
-							<div class="auth-footer"></div>
+							<div class="auth-footer"><a href="#">Switch</a></div>
+						</div>
+						<div class="follow-area d-flex justify-content-between gx-5">
+							<div class="follow-left">
+								<h5 class="text-capitalize">Suggestions for you</h5>
+							</div>
+							<div class="follow-right"><a href="#">See All</a></div>
+						</div>
+						<div class="follow-people-area mb-2">
+							<div class="people-list">
+								<img src="./img/me.jpg" alt="" />
+								<div class="people-desc">
+									<h6 class="list-title">yadri55real</h6>
+									<small class="list-title">follows you</small>
+								</div>
+							</div>
+							<div class="follow-link"><a href="#">Follow</a></div>
+						</div>
+						<div class="follow-people-area mb-2">
+							<div class="people-list">
+								<img src="./img/me.jpg" alt="" />
+								<div class="people-desc">
+									<h6 class="list-title">yadri55real</h6>
+									<small class="list-title">follows you</small>
+								</div>
+							</div>
+							<div class="follow-link"><a href="#">Follow</a></div>
+						</div>
+						<div class="direct-link ms-5 mt-4">
+							<a href="#">
+								about
+								<i class="bi bi-dot"></i>
+							</a>
+							<a href="#">
+								help
+
+								<i class="bi bi-dot"></i>
+							</a>
+							<a href="#">
+								press
+
+								<i class="bi bi-dot"></i>
+							</a>
+							<a href="#">
+								API
+
+								<i class="bi bi-dot"></i>
+							</a>
+							<a href="#">
+								jobs
+
+								<i class="bi bi-dot"></i>
+							</a>
+							<a href="#">
+								privacy
+
+								<i class="bi bi-dot"></i>
+							</a>
+							<a href="#">
+								terms
+
+								<i class="bi bi-dot"></i>
+							</a>
+							<a href="#">
+								location
+								<i class="bi bi-dot"></i>
+							</a>
+							<a href="#">language</a>
+							<div class="copyright mt-3">
+								<small class="text-muted text-uppercase">
+									&copy; instragram from meta by Ahmed
+								</small>
+							</div>
 						</div>
 					</div>
 					<div class="col-md-2"></div>
