--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>28 - IG timeline</title>
+		<title>28 - full instraGram UI Design</title>
 		<link
 			rel="stylesheet"
 			href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
@@ -83,28 +83,81 @@
 						<div id="article" class="mt-4">
 							<div class="card flex-row">
 								<div class="card-list">
-									<img src="./img/290207656_786068259436766_2630006453682191055_n.jpg" alt="" />
-									<div class="card-text"><h5>annorcode</h5></div>
+									<img src="./img/p1.jpg" alt="" />
+									<div class="card-text"><h5>lokato_lo4</h5></div>
 								</div>
 								<div class="card-list">
-									<img src="./img/290207656_786068259436766_2630006453682191055_n.jpg" alt="" />
-									<div class="card-text"><h5>annorcode</h5></div>
+									<img src="./img/p2.jpg" alt="" />
+									<div class="card-text"><h5>amnircode</h5></div>
 								</div>
 								<div class="card-list">
-									<img src="./img/290207656_786068259436766_2630006453682191055_n.jpg" alt="" />
-									<div class="card-text"><h5>annorcode</h5></div>
+									<img src="./img/p3.jpg" alt="" />
+									<div class="card-text"><h5>dummpic1</h5></div>
 								</div>
 								<div class="card-list">
-									<img src="./img/290207656_786068259436766_2630006453682191055_n.jpg" alt="" />
-									<div class="card-text"><h5>annorcode</h5></div>
+									<img src="./img/p4.jpg" alt="" />
+									<div class="card-text"><h5>dummpic2</h5></div>
 								</div>
 								<div class="card-list">
-									<img src="./img/290207656_786068259436766_2630006453682191055_n.jpg" alt="" />
-									<div class="card-text"><h5>annorcode</h5></div>
+									<img src="./img/p5.jpg" alt="" />
+									<div class="card-text"><h5>dummpic3</h5></div>
 								</div>
 								<div class="card-list">
-									<img src="./img/290207656_786068259436766_2630006453682191055_n.jpg" alt="" />
-									<div class="card-text"><h5>annorcode</h5></div>
+									<img src="./img/p6.jpg" alt="" />
+									<div class="card-text"><h5>dummpic4</h5></div>
+								</div>
+							</div>
+							<!-- post start -->
+							<div class="post-area mt-3">
+								<div class="card">
+									<div class="card-head">
+										<div class="card-left">
+											<img src="./img/me.jpg" alt="" />
+											<span>topujss</span>
+										</div>
+										<div class="card-right">
+											<div class="dropdown">
+												<a href="#" data-bs-toggle="dropdown">
+													<i class="bi bi-three-dots"></i>
+												</a>
+												<ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
+													<li><a href="#" class="dropdown-item text-danger">Report</a></li>
+													<li><a href="#" class="dropdown-item text-danger">Unfollow</a></li>
+													<li><a href="#" class="dropdown-item text-secondary">Go to post</a></li>
+												</ul>
+											</div>
+										</div>
+									</div>
+									<div class="card-body">
+										<img src="./img/motive.jpg" alt="" />
+										<div class="card-icon-area">
+											<div class="card-react">
+												<i class="bi bi-heart"></i>
+												<i class="bi bi-chat"></i>
+												<i class="bi bi-send-fill"></i>
+											</div>
+											<div class="card-save">
+												<i class="bi bi-bookmark"></i>
+											</div>
+										</div>
+										<div class="react-count">
+											<span>294</span>
+											Likes
+										</div>
+										<div class="react-time">
+											<span>Just Now</span>
+										</div>
+										<hr />
+										<div class="comment">
+											<div class="comment-write">
+												<i class="bi bi-emoji-smile"></i>
+												<input type="text" placeholder="Add a comment..." />
+											</div>
+											<div class="comment-btn">
+												<button type="submit" class="">Post</button>
+											</div>
+										</div>
+									</div>
 								</div>
 							</div>
 						</div>
@@ -124,22 +177,22 @@
 							</div>
 							<div class="follow-right"><a href="#">See All</a></div>
 						</div>
-						<div class="follow-people-area mb-2">
+						<div class="follow-people-area mb-3">
 							<div class="people-list">
-								<img src="./img/me.jpg" alt="" />
+								<img src="./img/s1.jpg" alt="" />
 								<div class="people-desc">
-									<h6 class="list-title">yadri55real</h6>
-									<small class="list-title">follows you</small>
+									<h6 class="list-title">youreal1</h6>
+									<small class="list-title">followed by udev</small>
 								</div>
 							</div>
 							<div class="follow-link"><a href="#">Follow</a></div>
 						</div>
 						<div class="follow-people-area mb-2">
 							<div class="people-list">
-								<img src="./img/me.jpg" alt="" />
+								<img src="./img/s2.jpg" alt="" />
 								<div class="people-desc">
-									<h6 class="list-title">yadri55real</h6>
-									<small class="list-title">follows you</small>
+									<h6 class="list-title">youreal2</h6>
+									<small class="list-title">followed by coder</small>
 								</div>
 							</div>
 							<div class="follow-link"><a href="#">Follow</a></div>
@@ -151,32 +204,26 @@
 							</a>
 							<a href="#">
 								help
-
 								<i class="bi bi-dot"></i>
 							</a>
 							<a href="#">
 								press
-
 								<i class="bi bi-dot"></i>
 							</a>
 							<a href="#">
 								API
-
 								<i class="bi bi-dot"></i>
 							</a>
 							<a href="#">
 								jobs
-
 								<i class="bi bi-dot"></i>
 							</a>
 							<a href="#">
 								privacy
-
 								<i class="bi bi-dot"></i>
 							</a>
 							<a href="#">
 								terms
-
 								<i class="bi bi-dot"></i>
 							</a>
 							<a href="#">
