--- a/index.html
+++ b/index.html
@@ -244,6 +244,28 @@
 				</div>
 			</div>
 		</div>
+		<!-- post edit start -->
+		<div class="modal fade" id="edit-post" >
+			<div class="modal-dialog modal-dialog-centered">
+				<div class="modal-content">
+					<div class="modal-header">
+						<h3 class="modal-title" id="staticBackdropLabel">Edit this Post</h3>
+						<button
+							type="button"
+							class="btn-close"
+							data-bs-dismiss="modal"
+							aria-label="Close"
+						></button>
+					</div>
+					<div class="modal-body">
+						<div class="msg"></div>
+						<form id="edit-form">
+							
+						</form>
+					</div>
+				</div>
+			</div>
+		</div>
 
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
 		<script src="function.js"></script>
